<resources>
    <string name="app_name">H-Calculator</string>

    <string name="digit_00">00</string>
    <string name="digit_0">0</string>
    <string name="digit_1">1</string>
    <string name="digit_2">2</string>
    <string name="digit_3">3</string>
    <string name="digit_4">4</string>
    <string name="digit_5">5</string>
    <string name="digit_6">6</string>
    <string name="digit_7">7</string>
    <string name="digit_8">8</string>
    <string name="digit_9">9</string>

    <string name="backspace">⌫</string>

    <string name="op_add">+</string>
    <string name="op_sub">−</string>
    <string name="op_div">÷</string>
    <string name="op_mul">×</string>
    <string name="op_perc">%</string>
    <string name="op_pow">^</string>
    <string name="op_sqrt">√</string>

    <string name="lparens">(</string>
    <string name="rparens">)</string>
    <string name="parens">( )</string>
    <string name="decimal_point">.</string>
    <string name="delete">←</string>
    <string name="equal">=</string>
    <string name="infinity">∞</string>
    <string name="memory_clear">MC</string>
    <string name="error_nan">NaN</string>
    <string name="error_syntax">Error</string>

    <string name="text_days">%1$dday ago</string>
    <string name="text_yesterday">yesterday</string>
    <string name="text_today">today</string>
    <string name="text_hours">%1$dhour ago</string>
    <string name="text_minutes">%1$dminute ago</string>
    <string name="text_just_now">just now</string>

    <string name="header_current_input">Current Input</string>
    <string name="delete_history">Delete History</string>
    <string name="text_settings">Settings</string>
    <string name="dialog_title_delete">Delete History</string>
    <string name="dialog_message_delete">Your Calculation History will be deleted. Do you want to proceed?</string>

    <string name="message_all_memory_clear">All memories will be reset.</string>
    <string name="message_back_button_press">To quit, press the \'Back\' button again</string>


    <string name="error_nothing_to_save">Nothing to save</string>
    <string name="error_cannot_save">Cannot save</string>
    <string name="error_formula_cannot_save">A formula cannot be saved.\nPlease complete your calculation.</string>
    <string name="error_maximum_number">Maximum number of digits(15) exceeded.</string>
    <string name="error_operator_first">Please type in the operator first.</string>
    <string name="error_formula_is_wrong">Wrong format.</string>
    <string name="error_maximum_character">Up to 200 characters available.</string>
    <string name="error_over_the_limit">The calculation is over the limit.</string>
    <string name="text_no_history">No History</string>

</resources>